+ Get artist musicbrainz

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.android.support:recyclerview-v7:24.2.0'
     compile files('libs/androjena_0.5.jar')
     compile files('libs/arqoid_0.5.jar')
     compile files('libs/icu4j-3.4.5.jar')
